[package]
name = "wasm-zip"
version = "0.1.5"
edition = "2021"
description = "Wasm zip"
readme = "README.md"
repository = "https://github.com/HampusHauffman/wasm-zip"
license = "MIT OR Apache-2.0"
keywords = ["Wasm", "zip", "Deflate"]
categories = ["compression", "wasm", "zip"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
js-sys = "0.3.63"
base64 = "0.21.2"
gloo = "0.8.0"
flate2 = "1.0.26"
zip = {version = "0.6.6",default-features = false, features = [ "deflate" ]}

futures = "0.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17.2"
lazy_static = "1.4.0"


[dependencies.web-sys]
version = "0.3.63"
features = ["File", "DragEvent", "DataTransfer", "Document", "Url", "Node", 
	"FileSystem","FileSystemDirectoryEntry","FileSystemEntry","FileSystemEntryCallback",
	"FileSystemDirectoryHandle","FileSystemDirectoryReader","FileSystemFileEntry","HtmlInputElement"]
