[package]
name = "wasm-zip"
version = "0.0.2"
edition = "2021"
description = "Wasm zip. Zip files using Web assembly."
readme = "README.md"
repository = "https://github.com/HampusHauffman/wasm-zip"
license = "Apache-2.0"
keywords = ["Wasm", "zip", "Deflate"]
categories = ["compression", "wasm", "zip"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.63"
base64 = "0.21.2"
gloo = "0.8.0"
flate2 = "1.0.26"
zip = {version = "0.6.6",default-features = false, features = [ "deflate" ]}

futures = "0.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17.2"
lazy_static = "1.4.0"


[dependencies.web-sys]
version = "0.3.63"
features = ["File", "DragEvent", "DataTransfer", "Document", "Url", "Node", 
	"FileSystem","FileSystemDirectoryEntry","FileSystemEntry","FileSystemEntryCallback",
	"FileSystemDirectoryHandle","FileSystemDirectoryReader","FileSystemFileEntry","HtmlInputElement"]
